# memee

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4d2a1e8f7c93_memory_organization_id.py  6d540c223770_drop_research_and_snapshots.py  843e414a0596_initial_schema.py
docs/: agent-discipline-CONTRIBUTING.md  benchmarks.md  cmam.md  design-principle.md  gamechangers.md  language-agnostic-gamechangers.md  launch-copy.md  launch-creative.md  launch-day1-packet.md  launch-posts.md  launch-strategy.md  ledger-simulation.md  microsite-brief.md  multilang-team.md  pack-format.md  post-launch-todo.md  r12-eval-expansion.md  r14-cross-encoder-rerank.md  r14-maturity-gated-expansion.md  r14-severity-intent-boost.md  r8-r10-graph-ltr-perf.md  release-positioning.md  review-fixes.md  roadmap.md  trial-and-licensing.md  v2-launch-copy.md
packs/seed/: agent-discipline.jsonl  agent-discipline.memee  agent-discipline.toml  http-api-canon.jsonl  http-api-canon.memee  http-api-canon.toml  mcp-server-canon.jsonl  mcp-server-canon.memee  mcp-server-canon.toml  python-web.jsonl  python-web.memee  python-web.toml  react-vite.jsonl  react-vite.memee  react-vite.toml
site/: index.html  packs.html
src/memee/: __init__.py  cli.py  config.py  demo.py  digest.py  doctor.py  hooks_config.py  installer.py  mcp_server.py  onboarding.py  packs_format.py  plugins.py  pulse.py  receipts.py  session_ledger.py  update_check.py
src/memee/adapters/: __init__.py  cmam.py
src/memee/api/: app.py
src/memee/api/routes/: api_v1.py  dashboard.py
src/memee/benchmarks/: __init__.py  orgmemeval.py
src/memee/engine/: briefing.py  calibration.py  canon_ledger.py  changelog.py  citations.py  confidence.py  dream.py  embeddings.py  evidence.py  feedback.py  hard_negatives.py  impact.py  inheritance.py  lifecycle.py  ltr.py  models.py  packs.py  predictive.py  propagation.py  quality_gate.py  reranker.py  research.py  review.py  router.py  search.py  tag_index.py  telemetry.py  tokens.py
src/memee/storage/: database.py  models.py
src/memee/sync/: claudemd.py
tests/: bench_autoresearch.py  calibration_eval.py  conftest.py  grid_search_ranker.py  r14_cross_encoder_eval.py  r14_maturity_gated_expansion_eval.py  r14_severity_intent_eval.py  r15_canon_ledger_simulation.py  retrieval_eval.py  test_benchmarks.py  test_blind_spots.py  test_brief_compact.py  test_briefing.py  test_cascade.py  test_citation_footer.py  test_cli.py  test_cmam_adapter.py  test_company_simulation.py  test_confidence.py  test_digest.py  test_enterprise.py  test_fts_trigger.py  test_gigacorp.py  test_impact_analysis.py  test_improvements.py  test_large_scale_simulation.py  test_learn_auto.py  test_lifecycle.py  test_mcp_dedup.py  test_megacorp.py  test_memee_cite.py  test_memee_why.py  test_models.py  test_multi_install_detection.py  test_multimodel.py  test_onboarding.py  test_pack_dedup.py  test_pack_format.py  test_pack_signing.py  test_perf_simulation.py  (+23 more)
