[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memee"
version = "1.2.0"
description = "Cross-model shared memory for AI agents. One canon — every model, every project, every teammate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Memee", email = "info@memee.eu" }]
keywords = ["ai", "agents", "memory", "llm", "mcp", "claude", "gpt", "gemini", "llama", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp[cli]>=1.0",
]

[project.urls]
Homepage = "https://memee.eu"
Documentation = "https://github.com/gizmax/memee#readme"
Repository = "https://github.com/gizmax/memee"
Issues = "https://github.com/gizmax/memee/issues"
Changelog = "https://github.com/gizmax/memee/blob/main/CHANGELOG.md"

[project.optional-dependencies]
vectors = [
    "sentence-transformers>=3.0",
]
fast-dedup = [
    # R11 cross-field: MinHash LSH narrows the quality-gate dedup probe
    # from a 500-row SequenceMatcher loop to a constant-time bucket query.
    # ~6.7× wall on the record() hot path at 1k memories. Falls through to
    # the brute path when this isn't installed.
    "datasketch>=1.6",
]
ltr = [
    # R9 LTR plumbing: optional Learning-to-Rank reranker over BM25 ∪
    # vector candidates. Without it, ``MEMEE_LTR_ENABLED=1`` is a no-op
    # and the heuristic stack runs unchanged. ``memee ranker train``
    # exits with a hint when the dep is missing.
    "lightgbm>=4.0",
    "numpy>=1.24",
]
rerank = [
    # R14 cross-encoder reranker (stage 5 of search.py). Reuses the same
    # ``sentence-transformers`` package that backs the bi-encoder vector
    # path; called out as a separate extra so installs that opt in to
    # rerank but not bi-encoder vectors get a clean install. Default OFF;
    # turned on per-process via ``MEMEE_RERANK_MODEL=ms-marco-MiniLM-L-6-v2``.
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "sentence-transformers>=3.0",
    "datasketch>=1.6",
]
all = [
    "memee[vectors,fast-dedup,ltr,rerank]",
]

[project.scripts]
memee = "memee.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memee"]

# sdist EXCLUDES — keep the paid package, internal runbooks, memory dumps,
# local DBs, and caches out of the public tar.gz even if someone accidentally
# builds from the private monorepo instead of the public mirror.
[tool.hatch.build.targets.sdist]
include = [
    "/src/memee",
    "/tests",
    "/alembic",
    "/alembic.ini",
    "/docs/cmam.md",
    "/docs/benchmarks.md",
    "/docs/review-fixes.md",
    "/docs/post-launch-todo.md",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/SECURITY.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/memee-team",
    "/memory",
    "/.claude",
    "/.venv",
    "/site",
    "/scripts",
    "/docs/trial-and-licensing.md",
    "/docs/launch-posts.md",
    "/docs/microsite-brief.md",
    "/docs/publish-oss.md",
    "/docs/project_split.md",
    "**/*.db",
    "**/*.db-shm",
    "**/*.db-wal",
    "**/__pycache__",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Default ruff selection covers most of what we want. The rules we deliberately
# relax for this codebase, with reasons:
#   E402  Module import not at top of file — alembic/env.py does
#         `sys.path.insert` before importing from memee; that's the documented
#         Alembic-scripts pattern.
#   E741  Ambiguous variable name — short names like `l`, `I`, `O` occasionally
#         appear in tight iterators where context makes intent obvious.
#   F841  Unused local variable — the engine has a few deliberately-named
#         markers (e.g. `marker_end = "*Last updated:"`) that document intent
#         even when not yet referenced. Real bugs get caught in review; we
#         don't want a CI fail blocking releases over doc-intent locals.
ignore = ["E402", "E741", "F841"]

# Alembic migrations are auto-generated; don't lint them strictly.
[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["F401", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
